--- a/ajuestesNuevos.html
+++ b/ajuestesNuevos.html
@@ -43,7 +43,7 @@
         button {
             padding: 10px 20px;
             font-size: 1em;
-            background-color: #4caf50;
+            background-color: #333;
             color: white;
             border: none;
             border-radius: 5px;
@@ -163,14 +163,17 @@
     </nav>
 
     <div id="modal">
-        <input id="cerrar-modal" name="modal" type="radio" />
-        <label class="cerrar" for="cerrar-modal" onclick="cerrarModal()">X</label>
-        <div class="contenido">
-            <p>Autor: Fito & fitipaldis</p>
-            <p>Canción: Soldadito marinero</p>
-            <p>Letra: Letras.com</p>
-        </div>
-    </div>
+		<input id="cerrar-modal" name="modal" type="radio" />
+		<label class="cerrar" for="cerrar-modal" onclick="cerrarModal()">X</label>
+		<div class="contenido">
+			<p>Alumno, curso: Raúl Montoya Ramos, 1DAM</p>
+			<p>Elementos no obvios de la rúbrica: He utilizado JavaScript para que al entrar al juego se muestre por
+				consola el mensaje "Bienvenido al juego" y al clicar un div aparezca el mensaje "Div clicado". Considero
+				que el resto de elementos requeridos por la rúbrica se pueden observar fácilmente, aunque si no es así
+				le agradecería que me lo consultara por moodle o presencialmente en Cenec y estaré encantado de
+				responder cualquier duda sobre mi trabajo</p>
+		</div>
+	</div>
 
     <div id="username-container">
 		<input type="text" id="username-input" placeholder="Nombre de usuario">
