--- a/ter.html
+++ b/ter.html
@@ -162,9 +162,12 @@
 		<input id="cerrar-modal" name="modal" type="radio" />
 		<label class="cerrar" for="cerrar-modal" onclick="cerrarModal()">X</label>
 		<div class="contenido">
-			<p>Autor: Fito & fitipaldis</p>
-			<p>Canción: Soldadito marinero</p>
-			<p>Letra: Letras.com</p>
+			<p>Alumno, curso: Raúl Montoya Ramos, 1DAM</p>
+			<p>Elementos no obvios de la rúbrica: He utilizado JavaScript para que al entrar al juego se muestre por
+				consola el mensaje "Bienvenido al juego" y al clicar un div aparezca el mensaje "Div clicado". Considero
+				que el resto de elementos requeridos por la rúbrica se pueden observar fácilmente, aunque si no es así
+				le agradecería que me lo consultara por moodle o presencialmente en Cenec y estaré encantado de
+				responder cualquier duda sobre mi trabajo</p>
 		</div>
 	</div>
 
